<resources>
    <string name="app_name">PayFlex</string>

    <string name="bangla_key">বাংলা</string>
    <string name="english_key">English</string>
    <string name="language_change_menu">Change Language</string>

    <string-array name="bank_list">
        <item>SBL</item>
        <item>Brac Bank</item>
        <item>EBL</item>
    </string-array>

    <string-array name="methode_list">
        <item>Cheque</item>
        <item>bKash</item>
        <item>Rocket</item>
    </string-array>

    <string-array name="plantList">
        <item><font fgcolor='#FFFFFF'>CTG</font></item>
        <item><font fgcolor='#FFFFFF'>TALTOLA</font></item>
        <item><font fgcolor='#FFFFFF'>BOGRA</font></item>
        <item><font fgcolor='#FFFFFF'>MONGLA</font></item>
    </string-array>

    <!--    Login Page-->
    <string name="payment_place_holder_text">Reference Image</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="todo">TODO</string>

    <!--Order list and details page-->
    <string name="order_list_title">order list</string>
    <string name="item_description">Item Description</string>
    <string name="sl">Sl.</string>
    <string name="rate">Rate</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="total_order_amount">Total Order Amount:</string>
    <string name="_0_0">0.0</string>
    <string name="save_new_order_button">Save Order</string>
    <string name="add_new_payment">Add new payment</string>
    <string name="update_btn">Update</string>
    <string name="save_new_order_btn">Save new order</string>
    <!--    Menu page -->
    <string name="logout">Logout</string>
    <string name="revision_menu">Revision Submit </string>

    <!--    Payment page-->
    <string name="submit_btn">Submit</string>
    <string name="payment_mode">Payment Mode:</string>
    <string name="bank_name">Bank Name:</string>
    <string name="reference_no">Reference No:</string>
    <string name="date">Date:</string>
    <string name="document_date_hint">document date</string>
    <string name="virtual_account">Virtual Account:</string>
    <string name="payment_amount">Amount:</string>
    <string name="create_order">Create New Order</string>

    <!--    প্রোফাইল-->
    <string name="key_profile">Profile</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="contact_person">CONTACT PERSON:</string>
    <string name="client_code">Code :</string>
    <string name="delivery_location">Delivery Location:</string>
    <string name="Address">Address:</string>
    <string name="name_of_the_client">Profile Information</string>
    <string name="order_code">Order Code:</string>
    <string name="indent_number">Indent Number:</string>
    <string name="order_date">Delivery Date:</string>

    <!--    Exit text-->
    <string name="application_exit">Do you want to exit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="my_offer">Offer</string>

    <!--    password change-->
    <string name="menu_pass">Update Password</string>
    <string name="current_pass">Current password</string>
    <string name="new_pass">New password</string>
    <string name="re_new_pass">Renter the password</string>
    <string name="cancel_btn">Cancel</string>
    <!--    Plant Selection-->
    <string name="plant_title">Select Delivery Plant</string>
    <string name="next">NEXT STEP</string>
    <!--    loading message-->
    <!--    <string name="update__url">Please press OPEN button for update instruction of your app</string>-->

</resources>
