<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item android:id="@+id/calendarData"-->
<!--        android:title="refresh"-->
<!--        app:showAsAction="ifRoom|collapseActionView"-->
<!--        android:icon="@drawable/ic_baseline_calendar_today_white"/>-->

    <item android:id="@+id/refresh"
        android:title="refresh"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_refresh_white"/>

    <item android:id="@+id/userProfile"
        android:title="@string/key_profile" />

    <item android:id="@+id/change_language"
        android:title="@string/language_change_menu" />

    <item android:id="@+id/change_password"
        android:title="@string/menu_pass" />

    <!--<item android:id="@+id/debugLog"
        android:title="D-Logs" />-->
    <item android:id="@+id/my_offer"
        android:title="@string/my_offer" />

    <item android:id="@+id/logout"
        android:title="@string/logout" />
</menu>