<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:elevation="10dp"
        app:cardCornerRadius="5dp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/current_pass"
                android:background="@drawable/back_squere_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_pass"
                android:gravity="center"
                android:layout_margin="2dp"
                android:inputType="text"
                android:padding="3dp"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/new_pass"
                android:layout_width="match_parent"
                android:background="@drawable/back_squere_border"
                android:layout_height="wrap_content"
                android:hint="@string/new_pass"
                android:gravity="center"
                android:inputType="text"
                android:layout_margin="2dp"
                android:padding="3dp"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/re_new_pass"
                android:background="@drawable/back_squere_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_new_pass"
                android:gravity="center"
                android:inputType="text"
                android:layout_margin="2dp"
                android:padding="3dp"
                android:textSize="18sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="right"
                tools:ignore="MissingConstraints">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cancel_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:elevation="5dp"
                    app:cardCornerRadius="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel_btn"
                        android:layout_margin="2dp"
                        android:padding="3dp"
                        android:textSize="18sp"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/update_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:elevation="5dp"
                    app:cardCornerRadius="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update_btn"
                        android:layout_margin="2dp"
                        android:padding="3dp"
                        android:textSize="18sp"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>