<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="#ffffff"
    android:id="@+id/orderListActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity.MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/defaultView">
                <include
                    android:id="@+id/userProfile"
                    layout="@layout/profile_card"/>
                <TextView
                    android:id="@+id/listTitle"
                    android:layout_below="@id/userProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/order_list_title"
                    android:textAllCaps="true"
                    android:background="#E8E8E8"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:textColor="#000000"/>
            </RelativeLayout>
            <!--            Save New order form-->
            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/orderTakeSegment"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="1dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/sl"
                        android:textStyle="bold"
                        android:background="@color/colorPrimary"
                        android:layout_marginEnd="1dp"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="@string/item_description"
                        android:background="@color/colorPrimary"
                        android:layout_marginEnd="1dp"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="2.2"
                        android:text="@string/rate"
                        android:textStyle="bold"
                        android:background="@color/colorPrimary"
                        android:layout_marginEnd="1dp"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="2.5"
                        android:text="@string/quantity"
                        android:textStyle="bold"
                        android:background="@color/colorPrimary"
                        android:layout_marginEnd="1dp"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="3"
                        android:text="@string/amount"
                        android:textStyle="bold"
                        android:background="@color/colorPrimary"
                        android:layout_marginEnd="1dp"
                        android:textColor="#FFFFFF"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/takeCustomerOrderList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1px"
                    android:background="#000000"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="@string/total_order_amount"
                        android:textColor="#000000"/>
                    <TextView
                        android:id="@+id/totalTakenBill"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="@string/_0_0"
                        android:gravity="right"
                        android:layout_marginEnd="3dp"
                        android:textColor="#000000" />
                </LinearLayout>
                <androidx.cardview.widget.CardView
                    android:visibility="visible"
                    android:id="@+id/saveOrder"
                    android:background="@color/barColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintVertical_bias="1.0"
                    android:layout_gravity="center"
                    android:elevation="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save_new_order_button"
                        android:textSize="15sp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="#000000"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:visibility="visible"
                android:id="@+id/bookedOrderList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:visibility="visible"
                android:id="@+id/warningText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="center"
                android:text="You don't have any Order for today. Please book a Order first!"
                />

        </LinearLayout>

</ScrollView>