<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profileActivity"
    tools:context=".Activityes.Profile.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:padding="10dp"
            android:layout_gravity="center">
            <ImageView
                android:background="@drawable/ashes_back_squere_border"
                android:padding="10dp"
                android:id="@+id/proImg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_person"
                android:layout_marginStart="3dip"
                android:contentDescription="@string/todo" />
            <ImageView
                android:id="@+id/addImg"
                android:layout_margin="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/add_a_photo_ash"
                android:layout_marginLeft="3dip"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:elevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#7EA9ECE6"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:padding="2dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/name"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_of_the_client"
                            android:textColor="#000"
                            android:textSize="18dp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="@color/barColor"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:text="@string/client_code"
                            android:textColor="#000000"/>
                        <TextView
                            android:id="@+id/clientCode"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:text="" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="@color/barColor"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:text="@string/contact_person"
                            android:textColor="#000000"/>
                        <TextView
                            android:id="@+id/presenterName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:text=""/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="@color/barColor"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:text="@string/mobile_no"
                            android:textColor="#000000"/>
                        <TextView
                            android:id="@+id/phoneNo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:layout_marginRight="10dp"
                            android:text=""/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/deliveryLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="@color/barColor"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/Address"
                            android:textColor="#000000" />
                        <TextView
                            android:id="@+id/address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:hint=""
                            android:layout_weight="1.5"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/updateProfile"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        android:elevation="10dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textColor="#000000"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/update_btn"/>
    </androidx.cardview.widget.CardView>

</RelativeLayout>